# EP-Agent

./: .gitignore  README.md  check_audio_backends.py  check_torch.py  check_torchcodec_deps.py  check_torchcodec_ffmpeg.py  verify_torchcodec.py
backend/: .env.example  main.py  requirements.txt
backend/app/: config.py
backend/data/: ep_agent.db  ep_agent.db-shm  ep_agent.db-wal
docs/: agent-architecture-v3.1.md  agent-architecture-v3.md  agent_call_graph_v6.4.json  architecture-decoupling-v4.md  architecture-v5-multi-agent.md  architecture.md  audio-chat-guide.md  audit-replay-design.md  audit-todo.json  ep-agent-langgraph.html  expert-system-design.md  proj_id_call_graph.json
frontend/: next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo
midi-player/: index.html
minimax/backend/: main.py  (+3 more)
minimax/python-sdk/: .env.example  README.md  pyproject.toml
minimax/python-sdk/minimax_api/: __init__.py  client.py  config.py  errors.py  models.py  schemas.py  streaming.py  transport.py  validation.py
minimax/python-sdk/minimax_api/resources/: __init__.py  _base.py  files.py  image.py  music.py  speech.py  text.py  video.py  voice.py
minimax/python-sdk/tests/: test_resources.py  test_streaming.py  test_transport.py  test_validation.py
sovits-installer/: .dockerignore  Dockerfile  docker-compose.yml  index.html  install.bat  install.html  install.sh  launcher.html  package.json  server.js  start-gptsovits.bat  start-sovits.bat  start-tts-api.bat  start-tts-api.ps1  start.bat  start.sh  state.json  updater.html
(+225 files in other folders)
