[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "minimax-api"
version = "0.1.0"
description = "Lightweight sync and async Python SDK for the MiniMax API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MiniMax SDK contributors" }]
dependencies = ["httpx>=0.25,<1"]
keywords = ["minimax", "sdk", "async", "text-to-speech", "video-generation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.optional-dependencies]
websocket = ["websockets>=12,<16"]
test = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["minimax_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
